<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>firtree</groupId>
  <artifactId>firtree</artifactId>
  <version>2.7.0</version>
  <packaging>jar</packaging>

  <name>firtree</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
   	<maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
    	<groupId>com.github.haifengl</groupId>
    	<artifactId>smile-core</artifactId>
    	<version>1.5.1</version>
    </dependency>
    <dependency>
    	<groupId>com.github.haifengl</groupId>
    	<artifactId>smile-plot</artifactId>
    	<version>1.5.1</version>
    </dependency>
    <dependency>
    	<groupId>com.github.haifengl</groupId>
    	<artifactId>smile-netlib</artifactId>
    	<version>1.5.1</version>
    </dependency>
	<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-simple</artifactId>
    <version>1.6.2</version>
</dependency>
  </dependencies>

  <build>
    <sourceDirectory>java/src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <compilerArgument>-Xlint:deprecation</compilerArgument>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
